# MAI

AI/ML_1lw/: .~lock.test.csv#  main.ipynb
Algorithms/: README.md
Algorithms/A*/: test
Algorithms/Astar/: main.cpp  t1.txt
Algorithms/Debuging/: 06.t  main.cpp
Algorithms/Graphs/: main.cpp
Algorithms/SuffixTree/: main.cpp
Algorithms/Z-functionSearch/: main.cpp
Algorithms/bigInt/: main.cpp
Algorithms/greedyAlgorithms/: main.cpp
Algorithms/radixSort/: Makefile  README.md  da6_2cns.cpp  t1.txt  t2.txt
ComputerGraphics/: README.md
ComputerGraphics/courseProject/: cp.py  report.odt
ComputerGraphics/lw1/: main.py  report.odt
ComputerGraphics/lw2/: main.cpp  main.py  report.odt
ComputerGraphics/lw3,4-5/: report.odt  report1.odt
ComputerGraphics/lw6/: main.py  report.odt
ComputerGraphics/lw7/: report.odt
Cryptography/: README.md
Cryptography/lw1/: main.cpp  msieve  polard.cpp  vars.txt
FunctionalProgramming/: README.md  main.lisp
FunctionalProgramming/lw1_1.19/: main.lisp  test.txt
FunctionalProgramming/lw2_2.9/: main.lisp  test.txt
FunctionalProgramming/lw3_3.15/: main.lisp
FunctionalProgramming/lw4_4.9/: main.lisp
FunctionalProgramming/lw5_5.22/: main.lisp
LogicProgramming/: README.md
Multimedia/lw2/: .~lock.AppleStore.csv#  2.ipynb  main.ipynb
Neuroinformatics/lw1/: lab1.ipynb
NumericalMethods/: README.md
ObjectOrientedProgramming/: README.md
ObjectOrientedProgramming/lw1_v4/: CMakeLists.txt  README.md  (+4 more)
OperatingSystems/: README.md
OperatingSystems/lw6v55/work/: CMakeLists.txt  child_node.cpp  main_node.cpp
(+102 files in other folders)
